{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 66,
  "lineage": "9d250bc9-efff-9a32-034a-71c66d424d63",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.88.81.163",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-05-13T03:24:31.851-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/prj-mtp-aiot-aisk-sat/regions/europe-north1/addresses/nat",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "nat",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "prj-mtp-aiot-aisk-sat",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mtp-aiot-aisk-sat/regions/europe-north1/addresses/nat",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/prj-mtp-aiot-aisk-sat/regions/europe-north1/routers/router"
            ]
          },
          "dependencies": [
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-13T03:24:50.983-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-mtp-aiot-aisk-sat/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-mtp-aiot-aisk-sat/global/networks/main",
            "priority": 1000,
            "project": "prj-mtp-aiot-aisk-sat",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mtp-aiot-aisk-sat/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/prj-mtp-aiot-aisk-sat/global/networks/main",
            "mtu": 1460,
            "name": "main",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "6537387741692207923",
            "numeric_id": "6537387741692207923",
            "project": "prj-mtp-aiot-aisk-sat",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mtp-aiot-aisk-sat/global/networks/main"
          },
          "dependencies": [
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-13T03:24:51.289-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/prj-mtp-aiot-aisk-sat/regions/europe-north1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-mtp-aiot-aisk-sat/global/networks/main",
            "project": "prj-mtp-aiot-aisk-sat",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mtp-aiot-aisk-sat/regions/europe-north1/routers/router"
          },
          "dependencies": [
            "google_compute_network.main",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "prj-mtp-aiot-aisk-sat/europe-north1/router/nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/prj-mtp-aiot-aisk-sat/regions/europe-north1/addresses/nat"
            ],
            "project": "prj-mtp-aiot-aisk-sat",
            "region": "europe-north1",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/prj-mtp-aiot-aisk-sat/regions/europe-north1/subnetworks/private",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat",
            "google_compute_network.main",
            "google_compute_router.router",
            "google_compute_subnetwork.private",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-13T03:24:51.703-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/prj-mtp-aiot-aisk-sat/regions/europe-north1/subnetworks/private",
            "ip_cidr_range": "10.0.0.0/18",
            "name": "private",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-mtp-aiot-aisk-sat/global/networks/main",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prj-mtp-aiot-aisk-sat",
            "purpose": "PRIVATE",
            "region": "europe-north1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.48.0.0/14",
                "range_name": "k8s-pod-range"
              },
              {
                "ip_cidr_range": "10.52.0.0/20",
                "range_name": "k8s-service-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mtp-aiot-aisk-sat/regions/europe-north1/subnetworks/private",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6440314144998466332
          },
          "dependencies": [
            "google_compute_network.main",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "fastapi_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/fastapi-ingress",
            "metadata": [
              {
                "annotations": {
                  "cert-manager.io/cluster-issuer": "letsencrypt-prod"
                },
                "generate_name": "",
                "generation": 2,
                "labels": {},
                "name": "fastapi-ingress",
                "namespace": "default",
                "resource_version": "1747386034166303021",
                "uid": "7b1f54e8-0dbc-4301-8b94-035e84c39b9c"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "tracker.timsmans.be",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "fastapi",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "tracker.timsmans.be"
                    ],
                    "secret_name": "frontend-tls"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "34.88.154.35"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "google_compute_network.main",
            "google_compute_subnetwork.private",
            "google_container_cluster.primary",
            "google_project_service.compute",
            "google_project_service.container",
            "kubernetes_service.fastapi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "frontend_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/frontend-ingress",
            "metadata": [
              {
                "annotations": {
                  "cert-manager.io/cluster-issuer": "letsencrypt-prod",
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 3,
                "labels": {},
                "name": "frontend-ingress",
                "namespace": "default",
                "resource_version": "1747385818476351024",
                "uid": "0b5c9714-c1d2-40b6-8c71-6779f4dba88f"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "tracker.timsmans.be",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "vue-frontend",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "tracker.timsmans.be"
                    ],
                    "secret_name": "frontend-tls"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "34.88.154.35"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "google_compute_network.main",
            "google_compute_subnetwork.private",
            "google_container_cluster.primary",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "fastapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/fastapi",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "fastapi"
                },
                "name": "fastapi",
                "namespace": "default",
                "resource_version": "1747135683726335006",
                "uid": "07eb3a15-d374-4036-b9a0-d540cdd968ae"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.52.4.102",
                "cluster_ips": [
                  "10.52.4.102"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "fastapi"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "google_compute_network.main",
            "google_compute_subnetwork.private",
            "google_container_cluster.primary",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/vue-frontend",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "frontend"
                },
                "name": "vue-frontend",
                "namespace": "default",
                "resource_version": "1747381829085551001",
                "uid": "f7d424e2-5edc-4bda-8673-7139f891ca95"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.52.12.225",
                "cluster_ips": [
                  "10.52.12.225"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "frontend"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "google_compute_network.main",
            "google_compute_subnetwork.private",
            "google_container_cluster.primary",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/postgres-db",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "postgres"
                },
                "name": "postgres-db",
                "namespace": "default",
                "resource_version": "1747211211287439000",
                "uid": "6bdd93a8-c673-4f7e-b961-5c9cd5a7c882"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.52.5.221",
                "cluster_ips": [
                  "10.52.5.221"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "postgres"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "google_compute_network.main",
            "google_compute_subnetwork.private",
            "google_container_cluster.primary",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    }
  ]
}